# bevy_lazy_prefabs

./: Cargo.toml  README.md
assets/prefabs/: bird.prefab  blue_bird.prefab  blue_cube.prefab  builtin.prefab  bundle.prefab  cam_2d.prefab  cam_3d.prefab  camera.prefab  cube.prefab  handle.prefab  hello_world.prefab  ordered.prefab  ortho_camera.prefab  persp_camera.prefab  sharp_sword.prefab  sprite.prefab  sprite.prefab.old  sword.prefab  test.prefab
examples/: apply.rs  assets_testing.rs  built_in.rs  bundle.rs  commands.rs  cube.rs  cubes.rs  example.rs  handle_test.rs  hello.rs  nested.rs  ordered.rs  prefab_asset_test.rs  reflect_component_test.rs  sprite.rs  sword.rs
src/: bevy_commands.rs  build_commands.rs  bundle.rs  commands.rs  dynamic_cast.rs  lazy_prefabs copy.pest  lazy_prefabs.pest  lib.rs  material.rs  parse.rs  plugin.rs  prefab.rs  prefab_commands.rs  prefab_reflect.rs  process.rs  processor.rs  registry.rs
src/v2/: commands.rs  mod.rs  parse.rs  prefab.rs  prefab_builder.rs  prefab_command.rs  registry.rs
tests/: prefab_material.rs
