[package]
name = "bevy_lazy_prefabs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.4"
pest = "2.1.3"
pest_derive = "2.1.0"
thiserror = "1.0.30"